Block price addaptive + fix adaprive in ather blocks for 4K visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -434,6 +434,30 @@ body {
   }
 }
 
+@media screen and (min-width: 1921px) and (max-width: 2560px) {
+  .navigation {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .navigation_medium {
+    width: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo {
+    font-size: 36px;
+    margin-right: 40px;
+  }
+  .navigation__text {
+    font-size: 36px;
+    margin-right: 40px;
+  }
+}
+
 .main {
   background: url("../images/bg-main_medium.jpeg") no-repeat;
   background-size: cover cover;
@@ -555,6 +579,13 @@ body {
 @media screen and (min-width: 1537px) and (max-width: 1920px) {
   .main {
     background: url("../images/bg-Main_2k.jpg") no-repeat;
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 1921px) and (max-width: 2560px) {
+  .main {
+    background: url("../images/bg-main-4k.jpeg") no-repeat;
     height: 100%;
   }
 }
@@ -804,6 +835,9 @@ body {
 .price {
   background: linear-gradient(89.95deg, #EFCFFA 30.72%, rgba(255, 255, 255, 0) 65.59%), linear-gradient(271.06deg, #CDC6F8 34.38%, rgba(255, 255, 255, 0) 105.35%), #FFFFFF;
   font-family: "Didact Gothic", sans-serif;
+  background-size: cover cover;
+  width: 100%;
+  height: 100%;
 }
 
 .price__container {
@@ -875,6 +909,7 @@ body {
 }
 
 .price__text--small {
+  font-weight: normal;
   font-size: 14px;
 }
 
@@ -890,8 +925,6 @@ body {
   padding: 13px 21px;
   background: #4F016E;
   border: 3px solid #9676FA;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   -webkit-transition: .5s;
   transition: .5s;
   margin-bottom: 50px;
@@ -905,5 +938,62 @@ body {
 
 .call:active {
   background-color: #fff;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .price__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .price__title--sub {
+    margin-right: 0px;
+  }
+  .price__manicure {
+    width: 280px;
+    margin-left: 0%;
+    max-width: 100%;
+  }
+  .price__manicure--background {
+    width: 100%;
+    padding: 0;
+  }
+  .price__text {
+    font-size: 16px;
+  }
+  .price__text--cursive {
+    font-size: 12px;
+  }
+  .price__text--small {
+    font-size: 12px;
+  }
+  .call {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .price__row {
+    width: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .price__title--sub {
+    margin-right: 0px;
+  }
+  .price__manicure {
+    max-width: 80%;
+    margin-left: 0%;
+  }
+  .call {
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
