--- a/scss/modules/_main.scss
+++ b/scss/modules/_main.scss
@@ -141,3 +141,12 @@
     }
 }
 
+// for 4K
+@media screen and (min-width: 1921px) and (max-width: 2560px) {
+
+    .main {
+        background: url('../images/bg-main-4k.jpeg') no-repeat;
+        height: 100%;        
+    }
+}
+
