--- a/scss/modules/_price.scss
+++ b/scss/modules/_price.scss
@@ -1,6 +1,9 @@
 .price {
     background: linear-gradient(89.95deg, #EFCFFA 30.72%, rgba(255, 255, 255, 0) 65.59%), linear-gradient(271.06deg, #CDC6F8 34.38%, rgba(255, 255, 255, 0) 105.35%), #FFFFFF;
     font-family: "Didact Gothic", sans-serif;
+    background-size: cover cover;
+    width: 100%;
+    height: 100%;
 
     &__container {
         display: flex;
@@ -59,6 +62,7 @@
         }
 
         &--small {
+            font-weight: normal;
             font-size: 14px;
         }
     }
@@ -76,7 +80,6 @@
     padding: 13px 21px;
     background: #4F016E;
     border: 3px solid #9676FA;
-    box-sizing: border-box;
     transition: .5s;
     margin-bottom: 50px;
 
@@ -88,5 +91,75 @@
 
     &:active {
         background-color: #fff;
+    }
+}
+
+// for mobile screens
+@media screen and (min-width: 320px) and (max-width: 767px) {
+
+    .price {
+        &__row {
+            flex-direction: column;
+        }
+
+        &__title{
+            &--sub {
+                margin-right: 0px;
+            }
+        }
+
+        &__manicure {
+            width: 280px;
+            margin-left: 0%;
+            max-width: 100%;
+
+            &--background {
+                width: 100%;
+                padding: 0; 
+            }
+        }
+
+        &__text {
+            font-size: 16px;
+            &--cursive {
+                font-size: 12px;
+            }
+
+            &--small {
+                font-size: 12px;
+            }
+        }
+    }  
+
+    .call {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+// for tablet screens
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .price {
+        &__row {
+            width: auto;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__title{
+            &--sub {
+                margin-right: 0px;
+            }
+        }
+
+        &__manicure {
+            max-width: 80%;
+            margin-left: 0%;
+        }
+    }  
+
+    .call {
+        text-align: center;
     }
 }
